hphp/test/zend/good/ext/standard/tests/strings/strval_error.php.expectf
*** Testing strval() : error conditions ***

-- Testing strval() function with more than expected no. of arguments --

Warning: strval() expects exactly 1 parameter, 2 given in %s/strval_error.php on line 21

-- Testing strval() function with less than expected no. of arguments --

Warning: strval() expects exactly 1 parameter, 0 given in %s/strval_error.php on line 25

-- Testing strval() function with object which has not toString() method  --

Catchable fatal error: Object of class MyClass could not be converted to string in %s/strval_error.php on line 29
